@@ -62,6 +62,8 @@ Fixes:
    function. [MG]
  * @chan/what failed to report when Admin channels also had the Player priv.
    Reported by Padraic. [MG]
+ * win32/config.h was lacking a definition for int16_t. Reported by Daniko.
+   [SW]
 
 Version 1.8.4 patchlevel 5                                 Jun 19,  2011
 
